[metadata]
name = xthecapx-utils
version = 0.0.1
author = xthecapx
author_email = xthecapx@gmail.com
description = MachEight challenge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xthecapx/xthecapx-utils
project_urls =
    Bug Tracker = https://github.com/xthecapx/xthecapx-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src